wrote the document structure section; next is execution model

--- a/doc/spec/PFA.tex
+++ b/doc/spec/PFA.tex
@@ -4,6 +4,8 @@
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
 \usepackage{xcolor}
+\usepackage{amsthm}
+\usepackage{fancyvrb}
 
 \newcommand{\PFAc}{\ttfamily\bfseries}
 \newcommand{\PFAp}{\ttfamily\bfseries}
@@ -18,7 +20,19 @@
     \setlength{\parskip}{0pt}}%
   {\vspace{-0.25 cm}\end{description}}
 
+\newenvironment{allowedfields}%
+  {\begin{center} \begin{minipage}{0.9\linewidth} \begin{description}}%
+  {\end{description} \end{minipage} \end{center}}
+
 \hypersetup{colorlinks=true, allcolors=blue}
+
+\theoremstyle{definition}
+\newtheorem{example}{Example}[section]
+
+\newenvironment{json}{
+  \VerbatimEnvironment
+  \begin{center}\begin{minipage}{0.9\linewidth}
+  \begin{Verbatim}[formatcom=\ttfamily\bfseries]}{\end{Verbatim}\end{minipage}\end{center}}
 
 \title{PFA: Portable Format for Analytics}
 \author{Jim Pivarski}
@@ -81,7 +95,7 @@ Within this specification, the key words ``MUST'', ``MUST NOT'', ``REQUIRED'', `
 
 At times, this specification provides hints and suggestions for implementation.  These suggestions are not normative and conformance with this specification does not depend on their realization.  These hints contain the expression ``We suggest\ldots'', ``Specific implementations may\ldots'', or similar wording.
 
-This specification uses the terms ``JSON object'', ``JSON object member name'', ``JSON object member value'', ``JSON array'', ``JSON array value'', ``number'', ``integer'', and ``string'' as defined in the JSON specification (\href{http://tools.ietf.org/html/rfc4627}{RFC-4627}), sections 2.2 through 2.5.  It also references and quotes sections of the Avro 1.7.6 specification (\url{http://avro.apache.org/docs/1.7.6/spec.html}).
+This specification uses the terms ``JSON object'', ``JSON object member name'', ``JSON object member value'', ``JSON array'', ``JSON array value'', ``number'', ``integer'', ``string'', ``boolean'', and ``null'' as defined in the JSON specification (\href{http://tools.ietf.org/html/rfc4627}{RFC-4627}), sections 2.2 through 2.5.  It also references and quotes sections of the Avro 1.7.6 specification (\url{http://avro.apache.org/docs/1.7.6/spec.html}).
 
 \subsection{PFA MIME type and file name extension}
 
@@ -89,8 +103,9 @@ The recommended MIME type for PFA is ``application/pfa+json'', though this is no
 
 It is recommended that PFA files have the extension ``.pfa'' (all lowercase) on all platforms.  It is recommended that gzip-compressed PFA files have the extension ``.pfaz'' (all lowercase) on all platforms.
 
-\hypertarget{sec:conformance}{}
+\hypertarget{hsec:conformance}{}
 \subsection{Levels of PFA conformance and PFA subsets}
+\label{sec:conformance}
 
 PFA is a large specification with many modules, so some projects or vendors may wish to implement some but not all of the specification.  However, interoperability is the reason PFA exists; if an implementation does not adhere to the standard, it has limited value.  It is therefore useful to explicitly define what it means for a system to partially implement the standard.
 
@@ -100,76 +115,184 @@ JSON subtrees of a PFA document are interpreted in the following five contexts.
 \item Special forms are JSON objects that specify executable expressions and function definitions.  Each is associated with a unique name.
 \item Library functions are strings that specify routines not defined in the PFA document itself.  Each is associated with a unique name that does not conflict with any of the special forms' names.
 \item Avro type schemae are JSON objects and strings that describe data types.  The syntax and meaning of Avro types are specified in \href{http://avro.apache.org/docs/1.7.6/spec.html}{the Avro 1.7.6 specification}.
-\item Embedded data are JSON objects, JSON arrays, numbers, integers, and strings that describe data structures.  The syntax and meaning of these objects are also defined by Avro, as the format used by the {\PFAc JSONEncoder} and {\PFAc JSONDecoder}.
+\item Embedded data are JSON objects, JSON arrays, numbers, integers, strings, booleans, and nulls that describe data structures.  The syntax and meaning of these objects are also defined by Avro, as the format used by the {\PFAc JSONEncoder} and {\PFAc JSONDecoder}.
 \end{itemize}
 
 A system may be partially PFA compliant if it implements some but not all top-level fields, some but not all special forms, or some but not all library functions.  Its coverage may be specified by listing the object member names of the top-level fields that it does implement, the names of the special forms that it does implement, and the names of the library functions that it does implement.  Those top-level fields, special forms, and library functions that it does implement must be completely and correctly implemented.  The coverage is therefore atomic and one can immediately determine if a particular system can execute a particular PFA document by checking the set of names used by the document against the set of names implemented by the system.
 
-Some special forms and library functions make use of some top-level fields.  For example, library functions that generate random numbers use the {\PFAc randseed} field for configuration.  These special forms and library functions cannot be considered implemented unless the corresponding top-level fields are also implemented.  These dependencies are explicitly defined in this specification.
+Some special forms and library functions make use of some top-level fields.  For example, library functions that generate random numbers use the {\PFAc randseed} field for configuration.  These special forms and library functions cannot be considered implemented unless the corresponding top-level fields are also implemented.  The dependencies are explicitly defined in this specification.
 
 Avro type schemae and JSON-encoded data should be completely implemented, to the extent defined by the Avro specification.  We suggest that implementations use language-specific Avro libraries as much as possible, rather than implementing Avro-related features in a PFA system.
 
-The PFA standard is defined so that a PFA-compliant system can verify that the JSON types of a PFA document are correctly composed (syntax check), verify that the PFA invariants and Avro data types are correctly composed (semantic check), and impose additional constraints on the set of top-level fields, special forms, and library functions used.  A PFA-compliant system should perform the syntax and semantic checks, including all type inference and type checking, but it is not required.  The behavior of a PFA document that does not satisfy these invariants and type constraints is not defined and such a document is not valid.  The third set of checks, however, is completely optional and different systems may apply different constraints on the kinds of scoring engines they are willing to execute.  However, the reasons why a PFA document is rejected should be explained.
+The PFA standard is defined so that a PFA-compliant system can verify that the JSON types of a PFA document are correctly composed (syntax check), verify that the PFA invariants are maintained and Avro data types are correctly composed (semantic check), and impose additional constraints on the set of top-level fields, special forms, and library functions used (optional checks).  A PFA-compliant system should perform the syntax and semantic checks, including all type inference and type checking, but it is not required.  A PFA document that does not satisfy these invariants and type constraints is not valid and its behavior is not defined by this specification.  The third set of checks, however, is completely optional and different systems may apply different constraints on the kinds of scoring engines they are willing to execute.  For instance, an implementation targeting a limited environment in which recursion is not possible may analyze the document and reject it if any recursive loops are found.
 
-FIXME: subsets
+This specification does not define any standardized subsets of PFA.  As stated above, partial conformance is defined by ad hoc subsets of atomic units.  However, as experience develops, the community may define industry-standard subsets of PFA for specific purposes or special environments.  Conforming to a standardized subset would provide better interoperability than defining ad hoc subsets, and we would recommend such a standard when it exists.  At present, we can only recommend a well-chosen ad hoc subset or complete conformance.
 
 \pagebreak
 
 \section{PFA document structure}
 
-A PFA document is a serialized JSON object representing an executable scoring engine.  Only the following JSON object member names may appear at this JSON nesting level.  These are the top-level fields referred to in the \hyperlink{sec:conformance}{conformance section} of this specification.  Three fields, {\PFAc action}, {\PFAc input}, and {\PFAc output}, are required for every PFA document and are therefore required for any PFA implementation.  The rest are optional for PFA documents and not strictly required for PFA implementations.  As explained in the conformance section, not implementing some top-level fields can make some special forms and functions unimplementable.
+A PFA document is a serialized JSON object representing an executable scoring engine.  Only the following JSON object member names may appear at this JSON nesting level.  These are the top-level fields referred to in the \hyperlink{hsec:conformance}{conformance section} of this specification.  Three fields, {\PFAc action}, {\PFAc input}, and {\PFAc output}, are required for every PFA document and are therefore required for every PFA implementation.  The rest are optional for PFA documents and not strictly required for PFA implementations.  As explained in the conformance section, not implementing some top-level fields can make some special forms and functions unimplementable.
 
-\begin{center}
-\begin{minipage}{0.9\linewidth}
-\begin{description}
-\item[\PFAc name:] A string used to identify the scoring engine.
-\item[\PFAc method:] A string that may be ``map'', ``emit'', or ``fold'' (\hyperlink{sec:method}{see below}).  If absent, the default value is ``map''.
-\item[\PFAc input:] An Avro schema representing the data type of data provided to the scoring engine (\hyperlink{sec:input-output}{see below}).
-\item[\PFAc output:] An Avro schema representing the data type of data produced by the scoring engine (\hyperlink{sec:input-output}{see below}).
-\item[\PFAc begin:] An \hyperlink{sec:expressions}{expression} or JSON array of \hyperlink{sec:expressions}{expressions} that are executed in the begin phase of the scoring engine's run (\hyperlink{sec:phases}{see below}).
-\item[\PFAc action:] An \hyperlink{sec:expressions}{expression} or JSON array of \hyperlink{sec:expressions}{expressions} that are executed for each input datum in the active phase of the scoring engine's run (\hyperlink{sec:phases}{see below}).
-\item[\PFAc end:] An \hyperlink{sec:expressions}{expression} or JSON array of \hyperlink{sec:expressions}{expressions} that are executed in the end phase of the scoring engine's run (\hyperlink{sec:phases}{see below}).
-\item[\PFAc fcns:] A JSON object whose member values are \hyperlink{sec:fcndef}{function definitions}, defining routines that may be called by expressions in {\PFAc begin}, {\PFAc action}, {\PFAc end}, or other functions.
-\item[\PFAc zero:] Embedded JSON data whose type must match the {\PFAc output} type of the engine.  This is only used by the ``fold'' method (\hyperlink{sec:method}{see below}).
-\item[\PFAc cells:] hey
-\item[\PFAc pools:] hey
-\item[\PFAc randseed:] hey
-\item[\PFAc doc:] hey
-\item[\PFAc metadata:] hey
-\item[\PFAc options:] hey
-\end{description}
-\end{minipage}
-\end{center}
+\begin{allowedfields}
+\item[\PFAc name:] A string used to identify the scoring engine (has no effect on calculations).
+\item[\PFAc method:] A string that may be ``map'', ``emit'', or ``fold'' (\hyperlink{hsec:method}{see Sec.~\ref{sec:method}}).  If absent, the default value is ``map''.
+\item[\PFAc input:] An Avro schema representing the data type of data provided to the scoring engine (\hyperlink{hsec:input-output}{see Sec.~\ref{sec:input-output}}).
+\item[\PFAc output:] An Avro schema representing the data type of data produced by the scoring engine (\hyperlink{hsec:input-output}{see Sec.~\ref{sec:input-output}}).  The way that output is returned to the host system depends on the {\PFAc method}.
+\item[\PFAc begin:] An \hyperlink{hsec:expressions}{expression} or JSON array of \hyperlink{hsec:expressions}{expressions} that are executed in the begin phase of the scoring engine's run (\hyperlink{hsec:phases}{see Sec.~\ref{sec:phases}}).
+\item[\PFAc action:] An \hyperlink{hsec:expressions}{expression} or JSON array of \hyperlink{hsec:expressions}{expressions} that are executed for each input datum in the active phase of the scoring engine's run (\hyperlink{hsec:phases}{see Sec.~\ref{sec:phases}}).
+\item[\PFAc end:] An \hyperlink{hsec:expressions}{expression} or JSON array of \hyperlink{hsec:expressions}{expressions} that are executed in the end phase of the scoring engine's run (\hyperlink{hsec:phases}{see Sec.~\ref{sec:phases}}).
+\item[\PFAc fcns:] A JSON object whose member values are \hyperlink{hsec:fcndef}{function definitions}, defining routines that may be called by expressions in {\PFAc begin}, {\PFAc action}, {\PFAc end}, or by expressions in other functions.
+\item[\PFAc zero:] Embedded JSON data whose type must match the {\PFAc output} type of the engine.  This is only used by the ``fold'' method to initialize the fold aggregation.
+\item[\PFAc cells:] A JSON object whose member values specify statically allocated, named, typed units of persistent state or embedded data (\hyperlink{hsec:state}{see Sec.~\ref{sec:state}}).  The format of this JSON object is restricted: \hyperlink{hsec:cells-pools}{see Sec.~\ref{sec:cells-pools}}.
+\item[\PFAc pools:] A JSON object whose member values specify dynamically allocated namespaces of typed persistent state (\hyperlink{hsec:state}{see Sec.~\ref{sec:state}}).  The format of this JSON object is restricted: \hyperlink{hsec:cells-pools}{see Sec.~\ref{sec:cells-pools}}.
+\item[\PFAc randseed:] An integer which, if present, sets the seed for pseudorandom number generation (\hyperlink{hsec:method}{see Sec.~\ref{sec:random}}).
+\item[\PFAc doc:] A string used to describe the scoring engine or its provenance (has no effect on calculations).
+\item[\PFAc metadata:] A JSON object, array, string, number, boolean, or null used to describe the scoring engine or its provenance (has no effect on calculations).
+\item[\PFAc options:] A JSON object of JSON objects, arrays, strings, numbers, booleans, or nulls used to control execution.  The format of this JSON object is restricted: see \hyperlink{hsec:options}{see Sec.~\ref{sec:options}}.
+\end{allowedfields}
+
+\begin{example}
+This is the simplest possible PFA document.  It only reads {\PFAc null} values, returns {\PFAc null} values, and performs no calculations.
+\begin{json}
+{"input": "null", "output": "null", "action": null}
+\end{json}
+\end{example}
+
+\begin{example}
+This is a simple yet non-degenerate PFA document.  It increments numerical input by 1.
+\begin{json}
+{"input": "double", "output": "double", "action": {"+": ["input", 1]}}
+\end{json}
+\end{example}
+
+\begin{example}
+This example implements a simple decision tree.  Input data are records with three fields: ``one'' (integer), ``two'' (double), and ``three'' (string).  The decision tree is stored in a cell named ``tree'' with type ``TreeNode''.  The tree has three binary splits (four leaves).  The scoring engine walks from the root to a leaf for each input datum, choosing a path based on values found in the input data, and returns the string it finds at the leaf.  (See the function definition of \hyperlink{model.tree.simpleWalk}{model.tree.simpleWalk} for a complete explanation.)
+\begin{json}
+{"input": {"type": "record", "name": "Datum", "fields":
+   [{"name": "one", "type": "int"},
+    {"name": "two", "type": "double"},
+    {"name": "three", "type": "string"}]},
+ "output": "string",
+ "cells": {"tree":
+             {"type":
+               {"type": "record",
+                "name": "TreeNode",
+                "fields": [
+                  {"name": "field", "type": "string"},
+                  {"name": "operator", "type": "string"},
+                  {"name": "value", "type": ["double", "string"]},
+                  {"name": "pass", "type": ["string", "TreeNode"]},
+                  {"name": "fail", "type": ["string", "TreeNode"]}]},
+              "init":
+                {"field": "one",
+                 "operator": "<",
+                 "value": {"double": 12},
+                 "pass":
+                   {"TreeNode":
+                     {"field": "two",
+                      "operator": ">",
+                      "value": {"double": 3.5},
+                      "pass": {"string": "yes-yes"},
+                      "fail": {"string": "yes-no"}}},
+                 "fail":
+                   {"TreeNode":
+                     {"field": "three",
+                      "operator": "==",
+                      "value": {"string": "TEST"},
+                      "pass": {"string": "no-yes"},
+                      "fail": {"string": "no-no"}}}}}},
+ "action":
+   {"model.tree.simpleWalk": ["input", {"cell": "tree"}]}}
+\end{json}
+\end{example}
+
+\hypertarget{hsec:cells-pools}{}
+\subsection{Cells and Pools}
+\label{sec:cells-pools}
+
+The {\PFAc cells} and {\PFAc pools} top-level fields, if present, are JSON objects whose member values are cell-specifications or pool-specifications, respectively.  A cell is a mutable, global data store that holds a single value with a specific type, and a pool is a mutable map from dynamically allocated names to values of a specific type (\hyperlink{hsec:state}{see Sec.~\ref{sec:state}}).
+
+A cell-specification is a JSON object with the following fields.
+\begin{allowedfields}
+\item[\PFAc type:] {\it (required)} An Avro schema representing the data type of this cell.
+\item[\PFAc init:] {\it (required)} Embedded JSON whose type must match {\PFAc type}.  This is the initial value of the cell (or constant value if it is never modified).
+\item[\PFAc shared:] An optional boolean specifying whether this cell is thread-local to one scoring engine or shared among a battery of similar engines (\hyperlink{hsec:concurrent}{see Sec.~\ref{sec:concurrent}}).  The default is false.
+\end{allowedfields}
+
+A pool-specification is a JSON object with the following fields.
+\begin{allowedfields}
+\item[\PFAc type:] {\it (required)} An Avro schema representing the data type of this pool.
+\item[\PFAc init:] JSON object whose member values are embedded JSON that must match {\PFAc type}.  Unlike a cell, a pool may be empty on initialization, in which case {\PFAc init} is either unspecified or {\PFAc \{\}}.
+\item[\PFAc shared:] An optional boolean specifying whether this pool is thread-local to one scoring engine or shared among a battery of similar engines (\hyperlink{hsec:concurrent}{see Sec.~\ref{sec:concurrent}}).  The default is false.
+\end{allowedfields}
+
+A complete explanation of cells and pools is given in \hyperlink{hsec:state}{Sec.~\ref{sec:state}}.
+
+\hypertarget{hsec:options}{}
+\subsection{Engine options}
+\label{sec:options}
+
+The top-level field {\PFAc options}, if present, is a JSON object whose member names must be chosen from the following.  Each member name is associated with a particular JSON type, also specified below.  See \hyperlink{hsec:state}{Sec.~\ref{sec:control}} for a complete explanation of the overridable options framework.
+\begin{allowedfields}
+\item[\PFAc timeout:] {\it (integer)} If positive, the maximum number of milliseconds before a single execution of {\PFAc begin}, {\PFAc action}, or {\PFAc end} throws a \hyperlink{hsec:exceptions}{timeout exception}.  Default is $-1$ (no timeout).
+\item[\PFAc timeout.begin:] {\it (integer)} If positive, the maximum number of milliseconds before a single execution of {\PFAc begin} throws a \hyperlink{hsec:exceptions}{timeout exception}.  Overrides {\PFAc timeout} if present and defaults to {\PFAc timeout} if not.
+\item[\PFAc timeout.action:] {\it (integer)} If positive, the maximum number of milliseconds before a single execution of {\PFAc action} throws a \hyperlink{hsec:exceptions}{timeout exception}.  Overrides {\PFAc timeout} if present and defaults to {\PFAc timeout} if not.
+\item[\PFAc timeout.end:] {\it (integer)} If positive, the maximum number of milliseconds before a single execution of {\PFAc end} throws a \hyperlink{hsec:exceptions}{timeout exception}.  Overrides {\PFAc timeout} if present and defaults to {\PFAc timeout} if not.
+\end{allowedfields}
+
+\pagebreak
+
+\section{Scoring engine execution model}
 
 
-\hypertarget{sec:method}{}
+
+
+\hypertarget{hsec:method}{}
 \subsection{Scoring method: map, emit, and fold}
+\label{sec:method}
 
-\hypertarget{sec:input-output}{}
+\hypertarget{hsec:input-output}{}
 \subsection{Input and output type specification}
+\label{sec:input-output}
 
-\hypertarget{sec:phases}{}
+data funnel (how input and output are handled)
+
+\hypertarget{hsec:phases}{}
 \subsection{Execution phases: begin, action, and end}
+\label{sec:phases}
 
 some applications would only have a begin and action, but no end
 
-\hypertarget{sec:state}{}
-\subsection{Specification of persistent and shared state}
+\hypertarget{hsec:state}{}
+\subsection{Persistent state: cells and pools}
+\label{sec:state}
 
-type specification
+cells and pools (specification only: link to extraction and manipulation)
 
-initialization
+\hypertarget{hsec:concurrent}{}
+\subsection{Concurrent access to shared state}
+\label{sec:concurrent}
 
-\hypertarget{sec:options}{}
-\subsection{Engine options}
+multiple engines
+
+\hypertarget{hsec:exceptions}{}
+\subsection{Exceptions}
+\label{sec:exceptions}
+
+\hypertarget{hsec:control}{}
+\subsection{Execution control}
+\label{sec:control}
 
 overridable options
 
-randseed
+timeouts
 
-timeout
+\hypertarget{hsec:random}{}
+\subsection{Pseudorandom number management}
+\label{sec:random}
 
-\subsection{Engine name, documentation, and metadata}
+random numbers
 
 \pagebreak
 
@@ -189,6 +312,8 @@ Type-safe null
 
 \section{Symbols, scope, and data structures}
 
+garbage collector
+
 \subsection{Immutable data, reassignable symbols}
 
 \subsection{Expression-level scope and mutation restrictions}
@@ -203,9 +328,11 @@ String-only map keys
 
 \section{User-defined functions}
 
-\hypertarget{sec:fcndef}{}
+\hypertarget{hsec:fcndef}{}
+\label{form:fcndef}
 
-\hypertarget{sec:fcnref}{}
+\hypertarget{hsec:fcnref}{}
+\label{form:fcnref}
 
 
 \subsection{Syntax and scope}
@@ -214,18 +341,9 @@ String-only map keys
 
 \pagebreak
 
-\section{Persistent and shared state}
-
-\subsection{Cells and pools}
-
-cells and pools (specification only: link to extraction and manipulation)
-
-\subsection{Concurrent access and manipulation of shared state}
-
-\pagebreak
-
-\hypertarget{sec:expressions}{}
+\hypertarget{hsec:expressions}{}
 \section{Expressions}
+\label{sec:expressions}
 
 Special forms and ordinary function calls
 
@@ -266,90 +384,90 @@ Special forms and ordinary function calls
 \subsection{Basic arithmetic}
 
 \subsubsection{Addition of two values ($+$)}
-% \libfcn{+}
+\libfcn{+}
 
 \subsubsection{Subtraction ($-$)}
-% \libfcn{-}
+\libfcn{-}
 
 \subsubsection{Multiplication of two values (*)}
-% \libfcn{*}
+\libfcn{*}
 
 \subsubsection{Floating-point division (/)}
-% \libfcn{/}
+\libfcn{/}
 
 \subsubsection{Integer division (//)}
-% \libfcn{//}
+\libfcn{//}
 
 \subsubsection{Negation (u$-$)}
-% \libfcn{u-}
+\libfcn{u-}
 
 \subsubsection{Modulo (\%)}
-% \libfcn{\%}
+\libfcn{\%}
 
 \subsubsection{Remainder (\%\%)}
-% \libfcn{\%\%}
+\libfcn{\%\%}
 
 \subsubsection{Raising to a power (**)}
-% \libfcn{**}
+\libfcn{**}
 
 \subsection{Comparison operators}
 
 Avro defines a \href{http://avro.apache.org/docs/1.7.6/spec.html#order}{sort order} for every pair of values with a compatible type, so any two objects of compatible type can be compared in PFA.
 
 \subsubsection{General comparision (cmp)}
-% \libfcn{cmp}
+\libfcn{cmp}
 
 \subsubsection{Equality (==)}
-% \libfcn{==}
+\libfcn{==}
 
 \subsubsection{Inequality (!=)}
-% \libfcn{!=}
+\libfcn{!=}
 
 \subsubsection{Less than (<)}
-% \libfcn{<}
+\libfcn{<}
 
 \subsubsection{Less than or equal to (<=)}
-% \libfcn{<=}
+\libfcn{<=}
 
 \subsubsection{Greater than (>)}
-% \libfcn{>}
+\libfcn{>}
 
 \subsubsection{Greater than or equal to (>=)}
-% \libfcn{>=}
+\libfcn{>=}
 
 \subsubsection{Maximum of two values (max)}
-% \libfcn{max}
+\libfcn{max}
 
 \subsubsection{Minimum of two values (min)}
-% \libfcn{min}
+\libfcn{min}
 
 \subsection{Logical operators}
 
 \subsubsection{Logical and (and)}
-% \libfcn{and}
+\libfcn{and}
 
 \subsubsection{Logical or (or)}
-% \libfcn{or}
+\libfcn{or}
 
 \subsubsection{Logical xor (xor)}
-% \libfcn{xor}
+\libfcn{xor}
 
 \subsubsection{Logical not (not)}
-% \libfcn{not}
+\libfcn{not}
 
 \subsection{Bitwise arithmetic}
 
 \subsubsection{Bitwise and (\&)}
-% \libfcn{\&}
+\libfcn{\&}
 
 \subsubsection{Bitwise or (|)}
-% \libfcn{|}
+\libfcn{|}
 
 \subsubsection{Bitwise xor (\^{})}
-% \libfcn{\^{}}
+\libfcn{\^{}}
 
 \subsubsection{Bitwise not (\textasciitilde{})}
-% \libfcn{TILDE}
+\libfcn{TILDE}
 
 \pagebreak
 
@@ -360,89 +478,89 @@ Avro defines a \href{http://avro.apache.org/docs/1.7.6/spec.html#order}{sort ord
 Constants such as $\pi$ and $e$ are represented as stateless functions with no arguments.  Specific implementations may choose to replace the function call with its inline value.
 
 \subsubsection{Archimedes' constant $\pi$ (m.pi)}
-% \libfcn{m.pi}
+\libfcn{m.pi}
 
 \subsubsection{Euler's constant $e$ (m.e)}
-% \libfcn{m.e}
+\libfcn{m.e}
 
 \subsection{Common functions}
 
 \subsubsection{Square root (m.sqrt)}
-% \libfcn{m.sqrt}
+\libfcn{m.sqrt}
 
 \subsubsection{Hypotnuse (m.hypot)}
-% \libfcn{m.hypot}
+\libfcn{m.hypot}
 
 \subsubsection{Trigonometric sine (m.sin)}
-% \libfcn{m.sin}
+\libfcn{m.sin}
 
 \subsubsection{Trigonometric cosine (m.cos)}
-% \libfcn{m.cos}
+\libfcn{m.cos}
 
 \subsubsection{Trigonometric tangent (m.tan)}
-% \libfcn{m.tan}
+\libfcn{m.tan}
 
 \subsubsection{Inverse trigonometric sine (m.asin)}
-% \libfcn{m.asin}
+\libfcn{m.asin}
 
 \subsubsection{Inverse trigonometric cosine (m.acos)}
-% \libfcn{m.acos}
+\libfcn{m.acos}
 
 \subsubsection{Inverse trigonometric tangent (m.atan)}
-% \libfcn{m.atan}
+\libfcn{m.atan}
 
 \subsubsection{Robust inverse trigonometric tangent (m.atan2)}
-% \libfcn{m.atan2}
+\libfcn{m.atan2}
 
 \subsubsection{Hyperbolic sine (m.sinh)}
-% \libfcn{m.sinh}
+\libfcn{m.sinh}
 
 \subsubsection{Hyperbolic cosine (m.cosh)}
-% \libfcn{m.cosh}
+\libfcn{m.cosh}
 
 \subsubsection{Hyperbolic tangent (m.tanh)}
-% \libfcn{m.tanh}
+\libfcn{m.tanh}
 
 \subsubsection{Natural exponential (m.exp)}
-% \libfcn{m.exp}
+\libfcn{m.exp}
 
 \subsubsection{Natural exponential minus one (m.expm1)}
-% \libfcn{m.expm1}
+\libfcn{m.expm1}
 
 \subsubsection{Natural logarithm (m.ln)}
-% \libfcn{m.ln}
+\libfcn{m.ln}
 
 \subsubsection{Logarithm base 10 (m.log10)}
-% \libfcn{m.log10}
+\libfcn{m.log10}
 
 \subsubsection{Arbitrary logarithm (m.log)}
-% \libfcn{m.log}
+\libfcn{m.log}
 
 \subsubsection{Natural logarithm of one plus square (m.ln1p)}
-% \libfcn{m.ln1p}
+\libfcn{m.ln1p}
 
 \subsection{Rounding}
 
 \subsubsection{Absolute value (m.abs)}
-% \libfcn{m.abs}
+\libfcn{m.abs}
 
 \subsubsection{Floor (m.floor)}
-% \libfcn{m.floor}
+\libfcn{m.floor}
 
 \subsubsection{Ceiling (m.ceil)}
-% \libfcn{m.ceil}
+\libfcn{m.ceil}
 
 \subsubsection{Simple rounding (m.round)}
-% \libfcn{m.round}
+\libfcn{m.round}
 
 \subsubsection{Unbiased rounding (m.rint)}
-% \libfcn{m.rint}
+\libfcn{m.rint}
 
 \subsubsection{Threshold function (m.signum)}
-% \libfcn{m.signum}
+\libfcn{m.signum}
 
 \subsubsection{Copy sign (m.copysign)}
-% \libfcn{m.copysign}
+\libfcn{m.copysign}
 
 \subsection{Linear algebra}
 
@@ -457,76 +575,76 @@ Strings are immutable, so none of the following functions modifies a string in-p
 \subsection{Basic access}
 
 \subsubsection{Length (s.len)}
-% \libfcn{s.len}
+\libfcn{s.len}
 
 \subsubsection{Extract substring (s.substr)}
-% \libfcn{s.substr}
+\libfcn{s.substr}
 
 \subsubsection{Modify substring (s.substrto)}
-% \libfcn{s.substrto}
+\libfcn{s.substrto}
 
 \subsection{Search and replace}
 
 \subsubsection{Contains (s.contains)}
-% \libfcn{s.contains}
+\libfcn{s.contains}
 
 \subsubsection{Count instances (s.count)}
-% \libfcn{s.count}
+\libfcn{s.count}
 
 \subsubsection{Find first index (s.index)}
-% \libfcn{s.index}
+\libfcn{s.index}
 
 \subsubsection{Find last index (s.rindex)}
-% \libfcn{s.rindex}
+\libfcn{s.rindex}
 
 \subsubsection{Check start (s.startswith)}
-% \libfcn{s.startswith}
+\libfcn{s.startswith}
 
 \subsubsection{Check end (s.endswith)}
-% \libfcn{s.endswith}
+\libfcn{s.endswith}
 
 \subsection{Conversions to or from other types}
 
 \subsubsection{Join an array of strings (s.join)}
-% \libfcn{s.join}
+\libfcn{s.join}
 
 \subsubsection{Split into an array of strings (s.split)}
-% \libfcn{s.split}
+\libfcn{s.split}
 
 \subsection{Conversions to or from other strings}
 
 \subsubsection{Concatenate two strings (s.concat)}
-% \libfcn{s.concat}
+\libfcn{s.concat}
 
 \subsubsection{Repeat pattern (s.repeat)}
-% \libfcn{s.repeat}
+\libfcn{s.repeat}
 
 \subsubsection{Lowercase (s.lower)}
-% \libfcn{s.lower}
+\libfcn{s.lower}
 
 \subsubsection{Uppercase (s.upper)}
-% \libfcn{s.upper}
+\libfcn{s.upper}
 
 \subsubsection{Left-strip (s.lstrip)}
-% \libfcn{s.lstrip}
+\libfcn{s.lstrip}
 
 \subsubsection{Right-strip (s.rstrip)}
-% \libfcn{s.rstrip}
+\libfcn{s.rstrip}
 
 \subsubsection{Strip both ends (s.strip)}
-% \libfcn{s.strip}
+\libfcn{s.strip}
 
 \subsubsection{Replace all matches (s.replaceall)}
-% \libfcn{s.replaceall}
+\libfcn{s.replaceall}
 
 \subsubsection{Replace first match (s.replacefirst)}
-% \libfcn{s.replacefirst}
+\libfcn{s.replacefirst}
 
 \subsubsection{Replace last match (s.replacelast)}
-% \libfcn{s.replacelast}
+\libfcn{s.replacelast}
 
 \subsubsection{Translate characters (s.translate)}
-% \libfcn{s.translate}
+\libfcn{s.translate}
 
 \subsection{Regular Expressions}
 
@@ -539,228 +657,228 @@ and stemming
 \subsection{Basic access}
 
 \subsubsection{Length (a.len)}
-% \libfcn{a.len}
+\libfcn{a.len}
 
 \subsubsection{Extract subsequence (a.subseq)}
-% \libfcn{a.subseq}
+\libfcn{a.subseq}
 
 \subsubsection{Modify subsequence (a.subseqto)}
-% \libfcn{a.subseqto}
+\libfcn{a.subseqto}
 
 \subsection{Search and replace}
 
 \subsubsection{Contains (a.contains)}
-% \libfcn{a.contains}
+\libfcn{a.contains}
 
 \subsubsection{Count instances (a.count)}
-% \libfcn{a.count}
+\libfcn{a.count}
 
 \subsubsection{Count instances by predicate (a.countPredicate)}
 libfcn{a.countPredicate}
 
 \subsubsection{Find first index (a.index)}
-% \libfcn{a.index}
+\libfcn{a.index}
 
 \subsubsection{Find last index (a.rindex)}
-% \libfcn{a.rindex}
+\libfcn{a.rindex}
 
 \subsubsection{Check start (a.startswith)}
-% \libfcn{a.startswith}
+\libfcn{a.startswith}
 
 \subsubsection{Check end (a.endswith)}
-% \libfcn{a.endswith}
+\libfcn{a.endswith}
 
 \subsection{Manipulation}
 
 \subsubsection{Concatenate two arrays (a.concat)}
-% \libfcn{a.concat}
+\libfcn{a.concat}
 
 \subsubsection{Append (a.append)}
-% \libfcn{a.append}
+\libfcn{a.append}
 
 \subsubsection{Insert or prepend (a.insert)}
-% \libfcn{a.insert}
+\libfcn{a.insert}
 
 \subsubsection{Replace item (a.replace)}
-% \libfcn{a.replace}
+\libfcn{a.replace}
 
 \subsubsection{Remove item (a.remove)}
-% \libfcn{a.remove}
+\libfcn{a.remove}
 
 \subsection{Reordering}
 
 \subsubsection{Sort (a.sort)}
-% \libfcn{a.sort}
+\libfcn{a.sort}
 
 \subsubsection{Sort with a less-than function (a.sortLT)}
-% \libfcn{a.sortLT}
+\libfcn{a.sortLT}
 
 \subsubsection{Randomly shuffle array (a.shuffle)}
-% \libfcn{a.shuffle}
+\libfcn{a.shuffle}
 
 \subsubsection{Reverse order (a.reverse)}
-% \libfcn{a.reverse}
+\libfcn{a.reverse}
 
 \subsection{Extreme values}
 
 \subsubsection{Maximum of all values (a.max)}
-% \libfcn{a.max}
+\libfcn{a.max}
 
 \subsubsection{Minimum of all values (a.min)}
-% \libfcn{a.min}
+\libfcn{a.min}
 
 \subsubsection{Maximum with a less-than function (a.maxLT)}
-% \libfcn{a.maxLT}
+\libfcn{a.maxLT}
 
 \subsubsection{Minimum with a less-than function (a.minLT)}
-% \libfcn{a.minLT}
+\libfcn{a.minLT}
 
 \subsubsection{Maximum $N$ items (a.maxN)}
-% \libfcn{a.maxN}
+\libfcn{a.maxN}
 
 \subsubsection{Minimum $N$ items (a.minN)}
-% \libfcn{a.minN}
+\libfcn{a.minN}
 
 \subsubsection{Maximum $N$ with a less-than function (a.maxNLT)}
-% \libfcn{a.maxNLT}
+\libfcn{a.maxNLT}
 
 \subsubsection{Minimum $N$ with a less-than function (a.minNLT)}
-% \libfcn{a.minNLT}
+\libfcn{a.minNLT}
 
 \subsubsection{Argument maximum (a.argmax)}
-% \libfcn{a.argmax}
+\libfcn{a.argmax}
 
 \subsubsection{Argument minimum (a.argmin)}
-% \libfcn{a.argmin}
+\libfcn{a.argmin}
 
 \subsubsection{Argument maximum with a less-than function (a.argmaxLT)}
-% \libfcn{a.argmaxLT}
+\libfcn{a.argmaxLT}
 
 \subsubsection{Argument minimum with a less-than function (a.argminLT)}
-% \libfcn{a.argminLT}
+\libfcn{a.argminLT}
 
 \subsubsection{Maximum $N$ arguments (a.argmaxN)}
-% \libfcn{a.argmaxN}
+\libfcn{a.argmaxN}
 
 \subsubsection{Minimum $N$ arguments (a.argminN)}
-% \libfcn{a.argminN}
+\libfcn{a.argminN}
 
 \subsubsection{Maximum $N$ arguments with a less-than function (a.argmaxNLT)}
-% \libfcn{a.argmaxNLT}
+\libfcn{a.argmaxNLT}
 
 \subsubsection{Minimum $N$ arguments with a less-than function (a.argminNLT)}
-% \libfcn{a.argminNLT}
+\libfcn{a.argminNLT}
 
 \subsection{Numerical combinations}
 
 \subsubsection{Add all array values (a.sum)}
-% \libfcn{a.sum}
+\libfcn{a.sum}
 
 \subsubsection{Multiply all array values (a.product)}
-% \libfcn{a.product}
+\libfcn{a.product}
 
 \subsubsection{Sum of logarithms (a.lnsum)}
-% \libfcn{a.lnsum}
+\libfcn{a.lnsum}
 
 \subsubsection{Arithmetic mean (a.mean)}
-% \libfcn{a.mean}
+\libfcn{a.mean}
 
 \subsubsection{Geometric mean (a.geomean)}
-% \libfcn{a.geomean}
+\libfcn{a.geomean}
 
 \subsubsection{Median (a.median)}
-% \libfcn{a.median}
+\libfcn{a.median}
 
 \subsubsection{Mode, or most common value (a.mode)}
-% \libfcn{a.mode}
+\libfcn{a.mode}
 
 \subsection{Set or set-like functions}
 
 PFA does not have a set datatype, but arrays can be interpreted as sets with the following functions.
 
 \subsubsection{Distinct items (a.distinct)}
-% \libfcn{a.distinct}
+\libfcn{a.distinct}
 
 \subsubsection{Set equality (a.seteq)}
-% \libfcn{a.seteq}
+\libfcn{a.seteq}
 
 \subsubsection{Union (a.union)}
-% \libfcn{a.union}
+\libfcn{a.union}
 
 \subsubsection{Intersection (a.intersect)}
-% \libfcn{a.intersect}
+\libfcn{a.intersect}
 
 \subsubsection{Set difference (a.diff)}
-% \libfcn{a.diff}
+\libfcn{a.diff}
 
 \subsubsection{Symmetric set difference (a.symdiff)}
-% \libfcn{a.symdiff}
+\libfcn{a.symdiff}
 
 \subsubsection{Subset check (a.subset)}
-% \libfcn{a.subset}
+\libfcn{a.subset}
 
 \subsubsection{Disjointness check (a.disjoint)}
-% \libfcn{a.disjoint}
+\libfcn{a.disjoint}
 
 \subsection{Functional programming}
 
 \subsubsection{Map array items with function (a.map)}
-% \libfcn{a.map}
+\libfcn{a.map}
 
 \subsubsection{Filter array items with function (a.filter)}
-% \libfcn{a.filter}
+\libfcn{a.filter}
 
 \subsubsection{Filter and map (a.filtermap)}
-% \libfcn{a.filtermap}
+\libfcn{a.filtermap}
 
 \subsubsection{Map and flatten (a.flatmap)}
-% \libfcn{a.flatmap}
+\libfcn{a.flatmap}
 
 \subsubsection{Reduce array items to a single value (a.reduce)}
-% \libfcn{a.reduce}
+\libfcn{a.reduce}
 
 \subsubsection{Right-to-left reduce (a.reduceright)}
-% \libfcn{a.reduceright}
+\libfcn{a.reduceright}
 
 \subsubsection{Fold array items to another type (a.fold)}
-% \libfcn{a.fold}
+\libfcn{a.fold}
 
 \subsubsection{Right-to-left fold (a.foldright)}
-% \libfcn{a.foldright}
+\libfcn{a.foldright}
 
 \subsubsection{Take items until predicate is false (a.takeWhile)}
-% \libfcn{a.takeWhile}
+\libfcn{a.takeWhile}
 
 \subsubsection{Drop items until predicate is true (a.dropWhile)}
-% \libfcn{a.dropWhile}
+\libfcn{a.dropWhile}
 
 \subsection{Functional tests}
 
 \subsubsection{Existential check, $\exists$ (a.any)}
-% \libfcn{a.any}
+\libfcn{a.any}
 
 \subsubsection{Univeral check, $\forall$ (a.all)}
-% \libfcn{a.all}
+\libfcn{a.all}
 
 \subsubsection{Pairwise check of two arrays (a.corresponds)}
-% \libfcn{a.corresponds}
+\libfcn{a.corresponds}
 
 \subsection{Restructuring}
 
 \subsubsection{Sliding window (a.slidingWindow)}
-% \libfcn{a.slidingWindow}
+\libfcn{a.slidingWindow}
 
 \subsubsection{Unique combinations of a fixed size (a.combinations)}
-% \libfcn{a.combinations}
+\libfcn{a.combinations}
 
 \subsubsection{Permutations (a.permutations)}
-% \libfcn{a.permutations}
+\libfcn{a.permutations}
 
 \subsubsection{Flatten array (a.flatten)}
-% \libfcn{a.flatten}
+\libfcn{a.flatten}
 
 \subsubsection{Group items by category (a.groupby)}
-% \libfcn{a.groupby}
+\libfcn{a.groupby}
 
 \pagebreak
 
@@ -781,10 +899,10 @@ PFA does not have a set datatype, but arrays can be interpreted as sets with the
 \subsection{Impute library}
 
 \subsubsection{Skip record (impute.errorOnNull)}
-% \libfcn{impute.errorOnNull}
+\libfcn{impute.errorOnNull}
 
 \subsubsection{Replace with default (impute.defaultOnNull)}
-% \libfcn{impute.defaultOnNull}
+\libfcn{impute.defaultOnNull}
 
 \pagebreak
 
@@ -803,10 +921,10 @@ CUSUM
 \subsection{Sample statistics}
 
 \subsubsection{Update aggregated mean (stat.sample.updateMean)}
-% \libfcn{stat.sample.updateMean}
+\libfcn{stat.sample.updateMean}
 
 \subsubsection{Compute aggregated mean (stat.sample.mean)}
-% \libfcn{stat.sample.mean}
+\libfcn{stat.sample.mean}
 
 accumulated mean, median(?)
 
@@ -817,10 +935,10 @@ accumulated mean, median(?)
 \subsection{Decision and regression Trees}
 
 \subsubsection{Tree walk with simple predicates (model.tree.simpleWalk)}
-% \libfcn{model.tree.simpleWalk}
+\libfcn{model.tree.simpleWalk}
 
 \subsubsection{Tree walk with user-defined predicates (model.tree.predicateWalk)}
-% \libfcn{model.tree.predicateWalk}
+\libfcn{model.tree.predicateWalk}
 
 \subsection{Cluster models}
 
